spelling & sizing errors

--- a/fccPortfolio/style.css
+++ b/fccPortfolio/style.css
@@ -57,7 +57,7 @@ h1 {
 #welcome-container {
     padding-top: 15em;
     padding-left: 10px;
-    max-width: 60%;
+    max-width: 55%;
 }
 
 /* main project container */
@@ -127,16 +127,18 @@ h1 {
 }
 
 .project-btn {
+    background-color: #b9ddf5;
 	border-radius:20px;
+    border: 1px solid steelblue;
 	display: inline-block;
     color: black;
 	font-size:15px;
     font-weight: bold;
-	padding:15px 30px;
+	padding:10px 20px;
 }
 
 .project-btn:hover {
-	background-color:black;
+	background-color:steelblue;
     color: white;
 }
 
@@ -150,6 +152,8 @@ h1 {
     padding-top: 12em;
     padding-left: 30px;
     padding-right: 30px;
+    max-width: 75%;
+    margin: 0 auto;
 }
 
 .general-link {
